--- a/src/view/career.twig
+++ b/src/view/career.twig
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="blackContainer">
-                <h1>Recherche d'un poste de développeur CDD ou CDI</h1>
+                <h1>Analyste - Développeur Web</h1>
             </div>
         </div>
     </div>
@@ -20,171 +20,145 @@
                 <h2>Expériences professionnelles</h2>
             </div>
             <div class="contentContainer">
-                <ul>
-                    <li>juin 2014 – Actuellement <strong>Grafia / Loisirs Enchères</strong></li>
-                </ul>
-                <p>Poursuite du développement de Loisirs Enchères.</p>
+                <span><span class="date">Sept. 2013 – Sept. 2014</span> <strong>Grafia / Loisirs Enchères</strong></span>
+                <p>
+                    - Poursuite du développement de Loisirs Enchères, ventes de lots à l’enchère. <br />
+                    <span class="languages"> > Symfony/Silex, MySQL, jQuery, PDF, Bootstrap </span> <br />
+                    - Développement de Sika Rembourse, jeu de tirage au sort <br />
+                    <span class="languages"> > PHP/Smarty, MySQL, jQuery, Bootstrap</span><br />
+                    - Développement de certaines parties d’une version de Candy Crush multijoueur et création de la base de données <br />
+                    <span class="languages"> > PHP/Smarty, MySQL, jQuery, NodeJS</span>
+                </p>
 
-                <ul>
-                    <li>Sept. 2013 – juin. 2014 <strong>Grafia</strong></li>
-                </ul>
-                <p>Poursuite du développement de Loisirs Enchères, ventes de lots
-                    à l’enchère développé à l’aide de Symphony/Silex PHP/MySQL et
-                    jQuery.<br />
-                    Développement de Sika rembourse, jeu de tirage au sort développé
-                    en PHP et JQuery à l’aide de Bootstrap pour un site en responsive.<br />
-                    Création de la base et développement de certaines parties du jeu
-                    Summer Break Edition, une version Candy Crush multijoueur en
-                    PHP/MySQL, jQuery et NodeJS.</p>
+                <span><span class="date">Juil. 2013 - Sept. 2013 </span> <strong>Grafia </strong></span>
+                <p>
+                    - Développement d’une version de Tetris<br />
+                    <span class="languages"> > Action Script 3</span><br />
+                    - Développement d’un jeu de Belote<br />
+                    <span class="languages"> > PHP/Smarty, MySQL, jQuery, NodeJS</span>
+                </p>
 
-                <ul>
-                    <li>Juil. 2013 – sept. 2013 <strong>Grafia</strong></li>
-                </ul>
-                <p>Développement d’une version de Tetris en ActionScript 3.
-                    Poursuite du développement d’un jeu de belote en PHP/MySQL,
-                    jQuery et NodeJS.</p>
+                <span><span class="date">Été 2012</span> <strong>DC Systems </strong></span>
+                <p>
+                    - Poursuite du développement du logiciel et du site Web de la solution MOKA, logiciel de gestion pour les Vendeurs à Domicile Indépendants (VDI)<br />
+                    <span class="languages"> > PHP, MySQL, JavaScript, C#/.NET, SQLServer</span>
+                </p>
 
-                <ul>
-                    <li>Déc. 2012 – fév. 2013 <strong>Garage de la Tour à Chârost</strong></li>
-                </ul>
-                <p>Reprise d’une application web et de la base de données pour un
-                    garage (initiative personnelle).</p>
+                <span><span class="date">Mars 2011 - Avril 2011</span> <strong>Mairie de Saint-Jean de Braye </strong></span>
+                <p>
+                    - Réalisation d’une application Web permettant d’effectuer des statistiques sur les entrées de la piscine de Saint-Jean de Braye<br />
+                    <span class="languages"> >  PHP, MySQL, JavaScript, FPDF</span>
+                </p>
 
-                <ul>
-                    <li>Eté 2012 <strong>DC Systems à Mérignac</strong></li>
-                </ul>
-                <p>Poursuite du développement du logiciel et du site Web de la
-                    solution MOKA, logiciel de gestion à destination des Vendeurs à
-                    Domicile Indépendants (VDI) développé en C#/SQL Server - PHP/
-                    MySQL.</p>
+                <span><span class="date">Mai 2010 - Juin 2010</span> <strong>Estampille E.I </strong></span>
+                <span>
+                    <br />
+                    - Entreprise de réinsertion spécialisée dans le bois. Création logiciel de gestion de stocks et d’édition de factures<br />
+                    <span class="languages"> > VBA, Excel</span>
+                </span>
+            </div>
 
-                <ul>
-                    <li>Nov. 2011 – avril 2012 <strong>Sogeti – DéfiH</strong></li>
-                </ul>
-                <p>Participation au DéfiH organisé par Sogeti. Réalisation d’un réseau
-                    social en PHP/MySQL + WordPress.</p>
+            <div class="blueContainer">
+                <h2>Projets personnels</h2>
+            </div>
+            <div class="contentContainer">
+                <span><span class="date">En cours</span> <strong>Garage de la Tour</strong></span>
+                <p>
+                    - Reprise d’une application Web et de la base de données <br />
+                    <span class="languages"> > Symfony/Silex, MySQL, jQuery, PDF, Bootstrap</span>
+                </p>
 
-                <ul>
-                    <li>Eté 2011 <strong>Garage de la Tour à Chârost</strong></li>
-                </ul>
-                <p>Réalisation d’une application web pour un garage avec une version
-                    iPhone en PHP/JavaScript/MySQL (initiative personnelle).</p>
+                <span><span class="date">Nov. 2014 - Déc. 2014</span> <strong>Site personnel</strong></span>
+                <p>
+                    - Reprise d’une application Web et de la base de données <br />
+                    <span class="languages">  > Silex, jQuery, PDF, Bootstrap </span>
+                </p>
 
-                <ul>
-                    <li>Mars – avril 2011 <strong>Mairie de Saint-Jean de Braye</strong></li>
-                </ul>
-                <p>Réalisation d’une application web permettant d’effectuer des
-                    statistiques sur les entrées de la piscine de Saint-Jean de Braye en
-                    PHP/MySQL + Joomla.</p>
+                <span><span class="date">Mai 2013</span> <strong>"ListeTitres"</strong></span>
+                <p>
+                    - Développement d’une application permettant de récupérer des titres musicaux diffusés sur certaines radios <br />
+                    <span class="languages">> C#/.NET, MySQL</span>
+                </p>
 
-                <ul>
-                    <li>Mai – juin 2010 <strong>Estampille E.I. à Orléans</strong></li>
-                </ul>
-                <span>Entreprise de réinsertion spécialisée dans le bois. Création d’un
-                        logiciel permettant d’établir une facture et de gérer les stocks.</span>
+                <span><span class="date">Été 2011</span> <strong>Garage de la Tour</strong></span>
+                <span>
+                    <br />
+                    - Développement d’une application Web et création de la base de données <br />
+                    <span class="languages"> > PHP, MySQL, JavaScript, FPDF</span>
+                </span>
+
             </div>
         </div>
+
+
         <div class="col-sm-6">
             <div class="blueContainer">
                 <h2>Formation</h2>
             </div>
             <div class="contentContainer">
-                <ul>
-                    <li>Actuellement <strong>5ème année d’ingénierie informatique</strong></li>
-                </ul>
-                <p>EPSI (Bordeaux)</p>
+                <span><span class="date">2015</span> <strong>École d'ingénierie informatique</strong></span>
+                <p>EPSI - Bordeaux</p>
 
-                <ul>
-                    <li>2011 <strong>BTS Informatique de Gestion – Développeur</strong></li>
-                </ul>
-                <p>Lycée Saint Paul - Bourdon Blanc (Orléans)</p>
+                <span><span class="date">2011</span> <strong>BTS Informatique de Gestion</strong></span>
+                <p>Lycée Saint Paul - Bourdon Blanc - Orléans</p>
 
-                <ul>
-                    <li>2008 <strong>Baccalauréat Scientifique</strong></li>
-                </ul>
-                <span>Lycée Honoré de Balzac (Issoudun)</span>
+                <span><span class="date">2008</span> <strong>Baccalauréat Scientifique</strong></span>
+                <span><br />Lycée Honoré de Balzac - Issoudun</span>
             </div>
 
             <div class="blueContainer">
                 <h2>Compétences informatiques</h2>
             </div>
             <div class="contentContainer">
-                <ul>
-                    <li><strong>Programmation</strong></li>
-                </ul>
-                <p>HTML/CSS – PHP – JavaScript/jQuery – C#/.NET - ActionScript – C/C++ – Visual Basic – Java.</p>
 
-                <ul>
-                    <li><strong>Framework PHP et outils</strong></li>
-                </ul>
-                <p>Symfony – NodeJS – Smarty – Twig – Bootstrap.</p>
+                <span><strong>Programmation</strong></span>
+                <p>HTML/CSS – PHP – JavaScript/jQuery – C#/.NET - ActionScript – C/C++ – Visual Basic – Java</p>
 
-                <ul>
-                    <li><strong>Programmation</strong></li>
-                </ul>
-                <p>HTML/CSS – PHP – JavaScript/jQuery – C#/.NET - ActionScript – C/C++ – Visual Basic – Java.</p>
+                <span><strong>Framework PHP</strong></span>
+                <p>Symfony – Silex</p>
 
-                <ul>
-                    <li><strong>Analyse</strong></li>
-                </ul>
-                <p>Merise – UML.</p>
+                <span><strong>Outils</strong></span>
+                <p>NodeJs – Smarty – Twig – Bootstrap – Git/Github – PHPStorm – WebStorm – Notepad++ – WorkBench – Vim</p>
 
-                <ul>
-                    <li><strong>Systèmes et réseaux</strong></li>
-                </ul>
-                <p>Administration réseau, mise en place d’une infrastructure, messagerie, virtualisation.</p>
+                <span><strong>Analyse</strong></span>
+                <p>Merise – UML</p>
 
-                <ul>
-                    <li><strong>Base de données</strong></li>
-                </ul>
-                <p>MySQL – SQL Server – Oracle.</p>
+                <span><strong>Base de données</strong></span>
+                <p>MySQL – SQL Server – MongoDB - Oracle</p>
 
-                <ul>
-                    <li><strong>Systèmes d’exploitation</strong></li>
-                </ul>
-                <span>Windows – Linux.</span>
+                <span><strong>Systèmes et réseaux</strong></span>
+                <p>Administration réseau -  Mise en place d’une infrastructure - Virtualisation - Messagerie</p>
+
+                <span><strong>Systèmes d’exploitation</strong></span>
+                <span><br />Windows – Linux</span>
             </div>
 
-            {#<div class="blueContainer">
+            <div class="blueContainer">
                 <h2>Langues</h2>
             </div>
             <div class="contentContainer">
-                <ul>
-                    <li><strong>Anglais</strong></li>
-                </ul>
-                <p>Score TOEIC 700.</p>
+                <span><strong>Anglais</strong></span>
+                <p>TOEIC : 700</p>
 
-                <ul>
-                    <li><strong>Espagnol</strong></li>
-                </ul>
-                <span>Niveau bac.</span>
-            </div>#}
+                <span><strong>Espagnol</strong></span>
+                <span><br />Niveau Bac</span>
+            </div>
 
             <div class="blueContainer">
                 <h2>Centres d'intérêt</h2>
             </div>
             <div class="contentContainer">
-                <ul>
-                    <li><strong>Courses automobile</strong></li>
-                </ul>
-                <p>Notamment F1 et GP2.</p>
-
-                <ul>
-                    <li><strong>Cuisine</strong></li>
-                </ul>
-                <span>Passion depuis de nombreuses années.</span>
-
-                {#<ul>
-                    <li><strong>Sport</strong></li>
-                </ul>
-                <span>Badminton occasionnellement.</span>#}
+                <p><strong>Course autombobile</strong></p>
+                <p><strong>Cuisine</strong></p>
+                <span><strong>Jeux vidéo</strong></span>
             </div>
+
         </div>
     </div>
 
     <div class="row button centered">
         <div class="col-sm-12">
-            <a class="btn btn-md btn-primary" role="button" href="./web/docs/cv-marc-leaument.pdf" target="_blank">
+            <a class="btn btn-md btn-primary" role="button" href="/docs/cv-marc-leaument.pdf" target="_blank">
                 <i class="glyphicon glyphicon-file"></i> Télécharger mon CV
             </a>
         </div>
