--- a/src/view/contact.twig
+++ b/src/view/contact.twig
@@ -49,7 +49,7 @@
             <h3>Plus d'informations</h3>
                 <p>
                     <span id="name">Marc LÉAUMENT<br /></span>
-                    Analyste & Développeur logiciels / web <br />
+                    Analyste & Développeur Web <br />
                     Dépannage & Maintenance informatique
                 </p>
                 <p>
@@ -57,7 +57,7 @@
                     33320 EYSINES <br />
 
                     <i class="fa fa-envelope fa-fw"></i>
-                    <a href="mailto:{{ mail }}"> {{ mail }}</a>
+                    <a href="mailto:{{ app.config.swiftmailer.username }}"> {{ app.config.swiftmailer.username }}</a>
                 </p>
                 <p class="text-justify">
                     N'hésitez pas à remplir le formulaire pour toute question, renseignement etc. <br />
