--- a/src/view/realization.twig
+++ b/src/view/realization.twig
@@ -18,10 +18,10 @@
 
         <div class="project col-sm-6 col-lg-4">
             <div class="content">
-                <img class="img-responsive" src="/images/GarageDeLaTour.png" alt="Garage de la Tour" />
-                <span class="title">Garage de la Tour</span>
+                <img class="img-responsive" src="/images/GarageDeLaTourV3.png" alt="Garage de la Tour" />
+                <span class="title">Garage de la Tour (v 3)</span>
                 <span class="info">Site regroupant les véhicules en vente pour le garage de la Tour ainsi que diverses informations pratiques.</span>
-                <span class="more"> <a class="btn btn-lg btn-primary" role="button" href="http://www.ggedelatour.hebergratuit.com" target="_blank"> <i class="glyphicon glyphicon-eye-open"></i> En savoir +</a></span>
+                <span class="more"> <a class="btn btn-lg btn-primary" role="button" href="http://www.garagedelatour.0lx.net" target="_blank"> <i class="glyphicon glyphicon-eye-open"></i> En savoir +</a></span>
             </div>
         </div>
 
@@ -52,14 +52,20 @@
 
         <div class="project col-sm-6 col-lg-4">
             <div class="content">
+                <img class="img-responsive" src="/images/GarageDeLaTourV2.png" alt="Garage de la Tour" />
+                <span class="title">Garage de la Tour (v 2)</span>
+                <span class="info">Site regroupant les véhicules en vente pour le garage de la Tour ainsi que diverses informations pratiques.</span>
+            </div>
+        </div>
+
+        <div class="project col-sm-6 col-lg-4">
+            <div class="content">
                 <img class="img-responsive" src="/images/EmballerCestBipe.png" alt="Emballer c'est bipé"/>
                 <span class="title">Emballé c'est bippé</span>
                 <span class="info">Version du célèbre jeu de Tetris réalisé pour l'entreprise cDiscount.</span>
             </div>
         </div>
-    </div>
 
-    <div class="row realization">
         <div class="project col-sm-6 col-lg-4">
             <div class="content">
                 <img class="img-responsive" src="/images/Belote.png" alt="Belote" />
